--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     buildCommand: npm install
     startCommand: node server.js
 
-  - type: static_site
+  - type: static
     name: sky-seeker-frontend
     rootDir: frontend
     staticPublishPath: .
