--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
-- type: web
-  name: sky-seeker-backend
-  env: node
-  plan: free
-  buildCommand: cd backend && npm install
-  startCommand: cd backend && npm start
-  envVars:
-    - key: NODE_ENV
-      value: production
+services:
+  - type: web
+    name: sky-seeker-backend
+    env: node
+    plan: free
+    buildCommand: cd backend && npm install
+    startCommand: cd backend && npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
