--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,18 @@ services:
   - type: web
     name: sky-seeker-backend
     env: node
+    rootDir: backend
     plan: free
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && npm start
+    buildCommand: npm install
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
+
+  - type: web
+    name: sky-seeker-frontend
+    env: static
+    rootDir: frontend
+    plan: free
+    buildCommand: ""
+    staticPublishPath: .
